Fixes right article spill over
The right article in the offerings was spilling into the left article if
the right article was longer. Switching from inline to inline-block
makes sure that the element stays in a block and doesn't spill back to
the left.

Amos King @adkron <amos.l.king@gmail.com>

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 
   .split {
     width: 45%;
-    display: inline;
+    display: inline-block;
   }
 
   .split.first {
